--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,9 +11,16 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
+    "nprogress": "^0.2.0",
+    "papaparse": "^5.5.2",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
+    "chart.js": "^4.4.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
