--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
+    "axios": "^1.7.9",
+    "chart.js": "^4.4.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
@@ -18,7 +20,6 @@
     "papaparse": "^5.5.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
-    "chart.js": "^4.4.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
